TRANSFORMATION_MATRIX_USE_X86_64_SSE2 broken for 64-bit Windows builds https://bugs.webkit.org/show_bug.cgi?id=107498

Reviewed by James Robinson.

Enable TRANSFORMATION_MATRIX_USE_X86_64_SSE2 for 64-bit Windows.

No new tests. Covered by existing tests.

* platform/graphics/transforms/TransformationMatrix.h:
(WebCore):
(TransformationMatrix):


Canonical link: https://commits.webkit.org/125801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140455 268f45cc-cd09-0410-ab3c-d52691b4dbfc